# python

./: .gitignore
api_livros/: app.py  pyproject.toml
app_customtkinter/: app.py
automatizacao_selenium/: .env_example  pyproject.toml
automatizacao_selenium/src/automatizacao_selenium/: app.py
curso/app_desktop_orm/: interface.py  orm.py
curso/app_web_sqlite/: create_db.py  dados.py  form.py
curso/gradio/: app_fatorial.py  app_interativo1.py  app_interativo2.py  app_interface.py  app_slide.py  app_soma.py  app_texto.py
curso/oo_projeto/: app.py
curso/oo_projeto/modelos/: avaliacao.py  biblioteca.py
curso/oo_projeto/modelos/itens/: item_biblioteca.py  livro.py  revista.py
curso/projeto_fast_api/app-jogadores/src/: App.js
curso/projeto_fast_api/farm1/: api.py
curso/projeto_fast_api/farm1/config/: database.py
curso/projeto_fast_api/farm1/models/: jogador.py
curso/projeto_fast_api/farm1/routes/: jogador.py
curso/projeto_fast_api/farm1/schemas/: jogador.py
curso/projeto_fast_api/fundamentos/: api.py
curso/testes/: functions.py  test_basico.py  test_basico2.py  test_database.py  test_fixture.py  test_markers.py  test_mock.py  test_param.py  test_param_simple.py  test_usuario_sistema.py  usuario_sistema.py
curso/topicos_gerais/: executa_decorators.py  modulos_decorator.py  teste_async.py
dashboard_varejo/: main.py
desafios/: agendamento_funcao.py  encontrando_indices.py  fatores_primos.py  jogo_espera.py  jogo_forca.py  ordenando_palavras.py  palindromo.py  salvando_dicionario.py
letras_musica/: app.py  pyproject.toml
(+2 files in other folders)
